; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_gcm.c_gcm_hash_remain.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_gcm.c_gcm_hash_remain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aead_request = type { i32 }
%struct.crypto_gcm_req_priv_ctx = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.ahash_request }
%struct.ahash_request = type { i32 }

@gcm_zeroes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.aead_request*, %struct.crypto_gcm_req_priv_ctx*, i32, i32)* @gcm_hash_remain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gcm_hash_remain(%struct.aead_request* %0, %struct.crypto_gcm_req_priv_ctx* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.aead_request*, align 8
  %6 = alloca %struct.crypto_gcm_req_priv_ctx*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.ahash_request*, align 8
  store %struct.aead_request* %0, %struct.aead_request** %5, align 8
  store %struct.crypto_gcm_req_priv_ctx* %1, %struct.crypto_gcm_req_priv_ctx** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.crypto_gcm_req_priv_ctx*, %struct.crypto_gcm_req_priv_ctx** %6, align 8
  %11 = getelementptr inbounds %struct.crypto_gcm_req_priv_ctx, %struct.crypto_gcm_req_priv_ctx* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store %struct.ahash_request* %12, %struct.ahash_request** %9, align 8
  %13 = load %struct.ahash_request*, %struct.ahash_request** %9, align 8
  %14 = load %struct.aead_request*, %struct.aead_request** %5, align 8
  %15 = call i32 @aead_request_flags(%struct.aead_request* %14)
  %16 = load i32, i32* %8, align 4
  %17 = load %struct.aead_request*, %struct.aead_request** %5, align 8
  %18 = call i32 @ahash_request_set_callback(%struct.ahash_request* %13, i32 %15, i32 %16, %struct.aead_request* %17)
  %19 = load %struct.crypto_gcm_req_priv_ctx*, %struct.crypto_gcm_req_priv_ctx** %6, align 8
  %20 = getelementptr inbounds %struct.crypto_gcm_req_priv_ctx, %struct.crypto_gcm_req_priv_ctx* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @gcm_zeroes, align 4
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @sg_init_one(i32 %21, i32 %22, i32 %23)
  %25 = load %struct.ahash_request*, %struct.ahash_request** %9, align 8
  %26 = load %struct.crypto_gcm_req_priv_ctx*, %struct.crypto_gcm_req_priv_ctx** %6, align 8
  %27 = getelementptr inbounds %struct.crypto_gcm_req_priv_ctx, %struct.crypto_gcm_req_priv_ctx* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @ahash_request_set_crypt(%struct.ahash_request* %25, i32 %28, i32* null, i32 %29)
  %31 = load %struct.ahash_request*, %struct.ahash_request** %9, align 8
  %32 = call i32 @crypto_ahash_update(%struct.ahash_request* %31)
  ret i32 %32
}

declare dso_local i32 @ahash_request_set_callback(%struct.ahash_request*, i32, i32, %struct.aead_request*) #1

declare dso_local i32 @aead_request_flags(%struct.aead_request*) #1

declare dso_local i32 @sg_init_one(i32, i32, i32) #1

declare dso_local i32 @ahash_request_set_crypt(%struct.ahash_request*, i32, i32*, i32) #1

declare dso_local i32 @crypto_ahash_update(%struct.ahash_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
